# dawidb

./: .clang-format  .clang-tidy  .gitignore  .ignore  CMakeLists.txt  main.cpp  parse.cpp
src/: CMakeLists.txt  const.hpp  cursor.hpp  pager.cpp  pager.hpp  parser.cpp  parser.hpp  row.cpp  row.hpp  table.cpp  table.hpp  tree.cpp  tree.hpp  with_error.hpp
tests/: CMakeLists.txt  pager_test.cpp  row_test.cpp  table_test.cpp
